Tue Apr 10 17:04:20 CEST 2012 (tk)
----------------------------------
 * libclamav/pe.c: drop old header check (bb#4699)

Thu Mar  1 19:49:21 CET 2012 (tk)
---------------------------------
 * clamd: ScanOnAccess now supports ClamAuth on OS X

Wed Feb 29 18:35:45 CET 2012 (acab)
-----------------------------------
 * libclamav/bytecode.c: reset to BYTECODE_AUTO mode at db reload so that
			 we don't fail to re-enable or re-disable it again
			 (bb#3789)

Wed Feb 29 17:02:18 EET 2012 (edwin)
------------------------------------
 * libclamav/bytecode_api*: Fix Sparc crash (bb #4324)

Wed Feb 29 14:09:18 CET 2012 (acab)
-----------------------------------
 * libclamav/pdf.c: scan the whole trailer for /H (bb#4315)

Tue Feb  7 23:23:48 CET 2012 (tk)
---------------------------------
 * libclamav: fix bytecode whitelisting

Wed Jan 25 18:56:44 CET 2012 (tk)
---------------------------------
 * libclamav: fix macro detection in OLE2BlockMacros (bb#4269)

Wed Mar 31 18:07:05 CEST 2010 (acab)
------------------------------------
  * libclamav/7z: add recovery mode to 7z ansi

Tue Jan 17 11:15:57 CET 2012 (acab)
-----------------------------------
 * misc: performance improvement for HP-UX PA-RISC - patch from 
	 Michael Pelletier <michael.v.pelletier*raytheon.com> (bb#3926)

Sun Jan  8 19:26:06 CET 2012 (acab)
-----------------------------------
 * libclamav: add preliminary support for MS Authenticode signatures,
	      both embedded and from cat files. Ideally, for windows
	      users, it should be sufficient to add the option
              -d %WINDIR%\system32\{F750E6C3-38EE-11D1-85E5-00C04FC295EE}
	      to clamscan.

Thu Nov  3 22:42:28 CET 2011 (acab)
-----------------------------------
 * libclamav/lzma_iface.c: stfu on (but still refuse) big lzma allocs

Tue Nov  1 12:26:46 CET 2011 (acab)
-----------------------------------
 * libclamav: Add 7z SFX support (b#3063)

Thu Dec 15 21:40:57 CET 2011 (tk)
---------------------------------